Fix gap on right hand side of gallery
Needed to be more specific so that the 3 items fully occupied the full
width of the parent container in 3 column layout.

--- a/css/styles.css
+++ b/css/styles.css
@@ -276,7 +276,7 @@ a,
   /* Portfolio Section */
 
   .portfolio-item {
-    width: 33%;
+    width: 33.3333%;
     padding-left: 1em;
     padding-right: 1em;
   }
